rename examples field to few_shot_prompt field to be explicit about few shot prompting techniques

--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "guided_prompt = GuidedPrompt(\n",
     "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\",\n",
-    "    examples=[\n",
+    "    few_shot_prompt=[\n",
     "            Context(\n",
     "                context=\"The quick brown fox jumps over the lazy black dog.\",\n",
     "                question=\"What is the color of the fox?\",\n",
