--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "guided_prompt = GuidedPrompt(\n",
     "        instruction=\"Generate one question and its corresponding answer based on context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
-    "        examples=[\n",
+    "        few_shot_prompt=[\n",
     "            Context(\n",
     "                context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
     "                question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
