--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -211,13 +211,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c167f01a",
    "metadata": {},
    "outputs": [],
    "source": [
     "guided_prompt = GuidedPrompt(\n",
     "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
     "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
-    "    examples=[Context(\n",
+    "    few_shot_prompt=[Context(\n",
     "        context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
     "        question=\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
     "        answer=\"Claude E. Shannon.\"\"\"\n",
