--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -310,7 +310,7 @@
     "answer based on code cell and its output. If there is no code cell, generate one question and its corresponding \\\n",
     "answer based on context. Following the format of the examples below to include the same context, question, and \\\n",
     "answer in the response.\",\n",
-    "    examples=[\n",
+    "    few_shot_prompt=[\n",
     "        Context(\n",
     "            context=\"\"\"'markdown' cell: '['### Use LLM to generate data in Uniflow.\n",
     "            In this example, we use the base `Config` defaults with the [OpenAIModelConfig] to generate questions and answers.']'\n",
