rename GuidedPrompt to PromptTemplate to improve readability

--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -71,7 +71,7 @@
     "from uniflow.flow.client import ExtractClient, TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig, NougatModelConfig\n",
-    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
     "from uniflow.op.extract.split.splitter_factory import SplitterOpsFactory\n",
     "from uniflow.op.extract.split.constants import PARAGRAPH_SPLITTER\n"
    ]
@@ -100,6 +100,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9cfcec43",
    "metadata": {},
    "source": [
     "### List all the available splitters\n",
@@ -109,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a2de91ff",
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +130,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7aea46f1",
    "metadata": {},
    "source": [
     "##### Load the pdf using Nougat"
@@ -136,6 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "8e5cd8de",
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +207,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "041c35ff",
    "metadata": {},
    "source": [
     "Now we need to write a little bit prompts to generate question and answer for a given paragraph, each promopt data includes a instruction and a list of examples with \"context\", \"question\" and \"answer\"."
@@ -215,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
     "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
     "    few_shot_prompt=[Context(\n",
