--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -72,7 +72,7 @@
     "from uniflow.flow.config import PipelineConfig\n",
     "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
     "from uniflow.flow.config import OpenAIModelConfig, NougatModelConfig\n",
-    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
     "from uniflow.op.extract.split.constants import PARAGRAPH_SPLITTER\n"
    ]
   },
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
     "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
     "    few_shot_prompt=[Context(\n",
