--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -65,7 +65,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -109,7 +109,7 @@
     "\n",
     "First, we need to demonstrate sample prompts for LLM, including a custom instruction and some sample prompts.\n",
     "\n",
-    "First we giving the custom instruction `GuidedPrompt` class."
+    "First we giving the custom instruction `PromptTemplate` class."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\",\n",
     "    few_shot_prompt=[\n",
     "            Context(\n",
