--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -139,7 +139,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()\n"
    ]
@@ -206,7 +206,7 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demonstrate sample prompts for LLM. We do this by giving a sample list of `Context` examples to the `GuidedPrompt` class."
+    "First, we need to demonstrate sample prompts for LLM. We do this by giving a sample list of `Context` examples to the `PromptTemplate` class."
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
     "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
     "    few_shot_prompt=[\n",
