--- a/example/transform/openai_pdf_source_10k_summary.ipynb
+++ b/example/transform/openai_pdf_source_10k_summary.ipynb
@@ -134,7 +134,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()\n"
    ]
@@ -201,11 +201,11 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demonstrate sample prompts for LLM. Because we are not generating the default questions and answers, we need to have a custom `instruction` and custom `examples`, which we configure in the `GuidedPrompt` class.\n",
+    "First, we need to demonstrate sample prompts for LLM. Because we are not generating the default questions and answers, we need to have a custom `instruction` and custom `examples`, which we configure in the `PromptTemplate` class.\n",
     "\n",
-    "First, we give a custom `instruction` to the `GuidedPrompt`. This ensures we are instructing the LLM to generate summaries instead of the default questions and answers.\n",
+    "First, we give a custom `instruction` to the `PromptTemplate`. This ensures we are instructing the LLM to generate summaries instead of the default questions and answers.\n",
     "\n",
-    "Next, we give a sample list of `Context` examples to the `GuidedPrompt` class. We pass in a custom `summary` property into our `Context` objects. This is an example summary based on the `context`."
+    "Next, we give a sample list of `Context` examples to the `PromptTemplate` class. We pass in a custom `summary` property into our `Context` objects. This is an example summary based on the `context`."
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"Generate a one sentence summary based on the last context below. Follow the format of the examples below to include context and summary in the response\",\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
