--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -69,7 +69,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
-    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()"
    ]
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "        instruction=\"Generate one question and its corresponding answer based on context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
     "        few_shot_prompt=[\n",
     "            Context(\n",
