--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -71,7 +71,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
