--- a/example/transform/huggingface_model_5QAs.ipynb
+++ b/example/transform/huggingface_model_5QAs.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig\n",
-    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -140,7 +140,7 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `GuidedPrompt` class."
+    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `PromptTemplate` class."
    ]
   },
   {
@@ -280,7 +280,7 @@
     "        )\n",
     "]\n",
     "\n",
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=sample_instruction,\n",
     "    few_shot_prompt=sample_examples\n",
     ")\n",
