--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -68,7 +68,7 @@
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
-    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
     "\n",
     "from langchain.document_loaders import NotebookLoader\n",
     "\n",
@@ -296,7 +296,7 @@
    "source": [
     "### Run Uniflow on the self-instruct dataset (with prompt)\n",
     "\n",
-    "Now we can extract knowledge from the given jupyter notebook via Uniflow! First, we need to define a [GuidedPrompt](https://github.com/CambioML/uniflow/blob/main/uniflow/schema.py#L57), which includes a prompt and a list of examples for the LLM to do few-shot learning."
+    "Now we can extract knowledge from the given jupyter notebook via Uniflow! First, we need to define a [PromptTemplate](https://github.com/CambioML/uniflow/blob/main/uniflow/schema.py#L57), which includes a prompt and a list of examples for the LLM to do few-shot learning."
    ]
   },
   {
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=\"If there is a code cell, generate one question given the markdown cell and its corresponding \\\n",
     "answer based on code cell and its output. If there is no code cell, generate one question and its corresponding \\\n",
     "answer based on context. Following the format of the examples below to include the same context, question, and \\\n",
