--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -71,7 +71,7 @@
     "from uniflow.flow.client import ExtractClient, TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig, NougatModelConfig\n",
-    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
+    "from uniflow.op.prompt import PromptTemplate, Context\n",
     "from uniflow.op.extract.split.splitter_factory import SplitterOpsFactory\n",
     "from uniflow.op.extract.split.constants import PARAGRAPH_SPLITTER\n"
    ]
