--- a/example/rater/bedrock_classification.ipynb
+++ b/example/rater/bedrock_classification.ipynb
@@ -74,7 +74,7 @@
     "from uniflow.flow.config  import RaterClassificationConfig\n",
     "from uniflow.op.model.model_config import BedrockModelConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.prompt import Context\n",
     "\n",
     "load_dotenv()"
    ]
