--- a/example/rater/classification.ipynb
+++ b/example/rater/classification.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -67,7 +67,7 @@
     "    RaterForClassificationOpenAIGPT4Config,\n",
     "    RaterForClassificationOpenAIGPT3p5Config\n",
     ")\n",
-    "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.prompt import Context\n",
     "from uniflow.op.op import OpScope\n",
     "\n",
     "load_dotenv()"
@@ -211,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  2.69s/it]"
+      "100%|██████████| 3/3 [00:13<00:00,  4.49s/it]"
      ]
     },
     {
@@ -224,27 +224,27 @@
       "              'response': [{'explanation': 'The context provided states that '\n",
       "                                           'the Pacific Ocean is the largest '\n",
       "                                           \"and deepest of Earth's oceanic \"\n",
-      "                                           'divisions, which directly answers '\n",
-      "                                           'the question posed. Therefore, the '\n",
-      "                                           'answer given is correct and '\n",
-      "                                           'appropriate.',\n",
+      "                                           'divisions, which directly supports '\n",
+      "                                           'the answer given to the question '\n",
+      "                                           'about the largest ocean on Earth. '\n",
+      "                                           'Therefore, the answer is correct.',\n",
       "                            'label': 'Yes'}],\n",
       "              'scores': [1.0],\n",
       "              'votes': ['yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7fbd696bbb20>},\n",
+      "  'root': <uniflow.node.Node object at 0x10dc10700>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
       "              'response': [{'explanation': 'The context states that '\n",
       "                                           'Shakespeare wrote 39 plays during '\n",
       "                                           'his lifetime, but the answer '\n",
-      "                                           'incorrectly states that he wrote '\n",
-      "                                           '31 plays. Therefore, the answer is '\n",
-      "                                           'not appropriate.',\n",
+      "                                           'provided incorrectly states that '\n",
+      "                                           'he wrote 31 plays. Therefore, the '\n",
+      "                                           'answer is not appropriate.',\n",
       "                            'label': 'No'}],\n",
       "              'scores': [0.0],\n",
       "              'votes': ['no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7fbd81856170>},\n",
+      "  'root': <uniflow.node.Node object at 0x10dc103d0>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -255,14 +255,15 @@
       "                                           'physical movement, which is '\n",
       "                                           'generally controlled by the motor '\n",
       "                                           'cortex and the nervous system. '\n",
-      "                                           'Therefore, the answer is not '\n",
-      "                                           'appropriate as it does not '\n",
-      "                                           'accurately reflect the information '\n",
-      "                                           'given in the context.',\n",
+      "                                           'Therefore, the answer is not fully '\n",
+      "                                           'appropriate as it omits the '\n",
+      "                                           'functions listed in the context '\n",
+      "                                           'and incorrectly focuses on '\n",
+      "                                           'physical movement.',\n",
       "                            'label': 'No'}],\n",
       "              'scores': [0.0],\n",
       "              'votes': ['no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7fbd696bb910>}]\n"
+      "  'root': <uniflow.node.Node object at 0x10dc109d0>}]\n"
      ]
     },
     {
@@ -296,8 +297,8 @@
      "text": [
       "{'explanation': 'The context provided states that the Pacific Ocean is the '\n",
       "                \"largest and deepest of Earth's oceanic divisions, which \"\n",
-      "                'directly answers the question posed. Therefore, the answer '\n",
-      "                'given is correct and appropriate.',\n",
+      "                'directly supports the answer given to the question about the '\n",
+      "                'largest ocean on Earth. Therefore, the answer is correct.',\n",
       " 'label': 'Yes'}\n"
      ]
     }
