--- a/example/rater/generated_answer.ipynb
+++ b/example/rater/generated_answer.ipynb
@@ -67,7 +67,7 @@
     "    RaterForGeneratedAnswerOpenAIGPT4Config,\n",
     "    RaterForGeneratedAnswerOpenAIGPT3p5Config\n",
     ")\n",
-    "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.prompt import Context\n",
     "from uniflow.op.op import OpScope\n",
     "\n",
     "\n",
