--- a/example/transform/huggingface_model.ipynb
+++ b/example/transform/huggingface_model.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig\n",
-    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
+    "from uniflow.op.prompt import PromptTemplate, Context\n",
     "\n",
     "load_dotenv()"
    ]
