--- a/example/transform/model.ipynb
+++ b/example/transform/model.ipynb
@@ -73,7 +73,7 @@
     "from uniflow.flow.config  import TransformConfig\n",
     "from uniflow.op.model.model_config  import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.prompt import Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -93,11 +93,16 @@
     {
      "data": {
       "text/plain": [
-       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformCopyFlow',\n",
+       "{'extract': ['ExtractIpynbFlow',\n",
+       "  'ExtractMarkdownFlow',\n",
+       "  'ExtractPDFFlow',\n",
+       "  'ExtractTxtFlow'],\n",
+       " 'transform': ['TransformAzureOpenAIFlow',\n",
+       "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
-       "  'TransformOpenAIFlow']}"
+       "  'TransformOpenAIFlow'],\n",
+       " 'rater': ['RaterFlow']}"
       ]
      },
      "execution_count": 3,
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:03<00:00,  1.74s/it]\n"
+      "100%|██████████| 2/2 [00:03<00:00,  1.51s/it]\n"
      ]
     },
     {
@@ -194,13 +199,13 @@
       "text/plain": [
        "[{'output': [{'response': ['question: What was the weather like on that day?\\nanswer: sunny.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x107c9bbb0>},\n",
-       " {'output': [{'response': [\"question: What is Bobby's profession?\\nanswer: software engineer.\"],\n",
+       "  'root': <uniflow.node.Node at 0x1169cae00>},\n",
+       " {'output': [{'response': ['question: What field do you work in?\\nanswer: AI/ML.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x107c9b7f0>}]"
+       "  'root': <uniflow.node.Node at 0x1169caa40>}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What was the weather like on that day?\\nanswer: sunny.'],\n",
+       "{'response': ['question: What is the color of the sky?\\nanswer: blue.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
