--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -65,7 +65,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
+    "from uniflow.op.prompt import PromptTemplate, Context\n",
     "\n",
     "load_dotenv()"
    ]
