--- a/example/transform/openai_model.ipynb
+++ b/example/transform/openai_model.ipynb
@@ -70,7 +70,7 @@
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.prompt import Context\n",
     "\n",
     "load_dotenv()"
    ]
