--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -71,7 +71,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
+    "from uniflow.op.prompt import Context, PromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
