--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -72,7 +72,7 @@
     "from uniflow.flow.config import PipelineConfig\n",
     "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
     "from uniflow.flow.config import OpenAIModelConfig, NougatModelConfig\n",
-    "from uniflow.op.prompt_schema import PromptTemplate, Context\n",
+    "from uniflow.op.prompt import PromptTemplate, Context\n",
     "from uniflow.op.extract.split.constants import PARAGRAPH_SPLITTER\n"
    ]
   },
