--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -139,7 +139,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
+    "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()\n"
    ]
