--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -69,7 +69,7 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
-    "from uniflow.op.prompt_schema import Context, PromptTemplate\n",
+    "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()"
    ]
