--- a/example/transform/huggingface_model_neuron.ipynb
+++ b/example/transform/huggingface_model_neuron.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig\n",
-    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt import PromptTemplate, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -132,7 +132,7 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `GuidedPrompt` class."
+    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `PromptTemplate` class."
    ]
   },
   {
@@ -156,9 +156,9 @@
     "            answer=\"black.\"\n",
     "        )]\n",
     "\n",
-    "guided_prompt = GuidedPrompt(\n",
+    "guided_prompt = PromptTemplate(\n",
     "    instruction=sample_instruction,\n",
-    "    examples=sample_examples\n",
+    "    few_shot_prompt=sample_examples\n",
     ")"
    ]
   },
@@ -280,7 +280,7 @@
    ],
    "source": [
     "config = TransformHuggingFaceConfig(\n",
-    "    guided_prompt_template=guided_prompt,\n",
+    "    prompt_template=guided_prompt,\n",
     "    model_config=HuggingfaceModelConfig(batch_size=4, model_name='mistralai/Mistral-7B-Instruct-v0.2', neuron=True))\n",
     "client = TransformClient(config)"
    ]
