update for pr feedback

--- a/example/rater/bedrock_classification.ipynb
+++ b/example/rater/bedrock_classification.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.flow.client import RaterClient\n",
-    "from uniflow.flow.config  import RaterClassificationBedrockClaudeConfig\n",
+    "from uniflow.flow.config  import RaterForClassificationBedrockClaudeConfig\n",
     "from uniflow.op.prompt_schema import Context\n",
     "\n",
     "load_dotenv()"
@@ -169,21 +169,21 @@
    "source": [
     "### Set up config: JSON format\n",
     "\n",
-    "In this example, we will use the `RaterClassificationBedrockClaudeConfig` to generate questions and answers. It uses the `Claude v2` model by default.\n",
+    "In this example, we will use the `RaterForClassificationBedrockClaudeConfig` to generate questions and answers. It uses the `Claude v2` model by default.\n",
     "\n",
-    "We use the default `guided_prompt` in `RaterClassificationBedrockClaudeConfig`, which contains two examples, labeled by Yes and No. The default examples are also wrap by `Context` class with fields of context, question, answer (and label), consistent with input data.\n",
+    "We use the default `prompt_template` in `RaterForClassificationBedrockClaudeConfig`, which contains two examples, labeled by Yes and No. The default examples are also wrap by `Context` class with fields of context, question, answer (and label), consistent with input data.\n",
     "\n",
     "The response format is `json`, as specified in our `aws configure`, so the model returns json object as output instead of plain text, which can be processed more conveniently. \n",
     "\n",
     "In this example, we will use the Anthropic Claude V2 Model as the default LLM to generate questions and answers.\n",
     "\n",
-    "We use the default `guided_prompt` in `RaterClassificationBedrockClaudeConfig`, which includes the four attributes:\n",
+    "We use the default `prompt_template` in `RaterForClassificationBedrockClaudeConfig`, which includes the four attributes:\n",
     "- `flow_name` (str): Name of the rating flow, default is \"RaterFlow\".\n",
-    "- `model_config` (ModelConfig): Configuration for the Bedrock model. Includes aws_region (\"us-west-2\"), aws_profile (\"default\"),\n",
+    "- `model_config` (ModelConfig): Configuration for the Bedrock model. Includes aws_region (\"\"), aws_profile (\"default\"),\n",
     "        aws_access_key_id, aws_secret_key_id, aws_secret_access_key, aws_session_token, batch_size(1),\n",
     "        model name (\"anthropic.claude-v2\"), batch_size (1), the server (\"BedrockModelServer\"), and the model_kwargs.\n",
     "- `label2score` (Dict[str, float]): Mapping of labels to scores, default is {\"Yes\": 1.0, \"No\": 0.0}.\n",
-    "- `guided_prompt_template` (GuidedPrompt): Template for guided prompts used in rating. Includes instructions\n",
+    "- `prompt_template` (GuidedPrompt): Template for guided prompts used in rating. Includes instructions\n",
     "                                        for rating, along with examples that detail the context, question,\n",
     "                                        answer, label, and explanation for each case.\n",
     "\n",
@@ -199,8 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RaterClassificationBedrockClaudeConfig(flow_name='RaterFlow',\n",
-      "                                       model_config=BedrockModelConfig(aws_region='us-west-2',\n",
+      "RaterForClassificationBedrockClaudeConfig(flow_name='RaterFlow',\n",
+      "                                       model_config=BedrockModelConfig(aws_region='',\n",
       "                                                                       aws_profile='default',\n",
       "                                                                       aws_access_key_id='',\n",
       "                                                                       aws_secret_access_key='',\n",
@@ -210,13 +210,13 @@
       "                                                                       model_server='BedrockModelServer',\n",
       "                                                                       model_kwargs={}),\n",
       "                                       label2score={'No': 0.0, 'Yes': 1.0},\n",
-      "                                       guided_prompt_template=GuidedPrompt(instruction=\"Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt. The response label should be one of the following: ['Yes', 'No'].\", examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]),\n",
+      "                                       prompt_template=GuidedPrompt(instruction=\"Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt. The response label should be one of the following: ['Yes', 'No'].\", examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]),\n",
       "                                       num_thread=1)\n"
      ]
     }
    ],
    "source": [
-    "config = RaterClassificationBedrockClaudeConfig()\n",
+    "config = RaterForClassificationBedrockClaudeConfig()\n",
     "pprint.pprint(config)"
    ]
   },
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can customize some parameters in `RaterClassificationBedrockClaudeConfig` to fit our needs. For one, we need to set the `aws_profile` to match the credentials we set earlier in the `AWS CLI`. We can also set custom parameters like the temperature for the model."
+    "We can customize some parameters in `RaterForClassificationBedrockClaudeConfig` to fit our needs. For one, we need to set the `aws_profile` to match the credentials we set earlier in the `AWS CLI`, and we also have to give it a `aws_region`. We can also set custom parameters like the temperature for the model."
    ]
   },
   {
@@ -233,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config.model_config.aws_region = \"us-west-2\"\n",
     "config.model_config.aws_profile = \"default\"\n",
     "config.model_config.model_kwargs = {'temperature': 0.1}"
    ]
@@ -253,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RaterConfig(flow_name='RaterFlow', model_config={'aws_region': 'us-west-2', 'aws_profile': 'default', 'aws_access_key_id': '', 'aws_secret_access_key': '', 'aws_session_token': '', 'model_name': 'anthropic.claude-v2', 'batch_size': 1, 'model_server': 'BedrockModelServer', 'model_kwargs': {'temperature': 0.1}}, label2score={'Yes': 1.0, 'No': 0.0}, guided_prompt_template=GuidedPrompt(instruction=\"Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt. The response label should be one of the following: ['Yes', 'No'].\", examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]), num_thread=1)\n"
+      "RaterConfig(flow_name='RaterFlow', model_config={'aws_region': 'us-west-2', 'aws_profile': 'default', 'aws_access_key_id': '', 'aws_secret_access_key': '', 'aws_session_token': '', 'model_name': 'anthropic.claude-v2', 'batch_size': 1, 'model_server': 'BedrockModelServer', 'model_kwargs': {'temperature': 0.1}}, label2score={'Yes': 1.0, 'No': 0.0}, prompt_template=GuidedPrompt(instruction=\"Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt. The response label should be one of the following: ['Yes', 'No'].\", examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]), num_thread=1)\n"
      ]
     }
    ],
